[package]
name = "chrono-simpletz"
version = "0.1.3"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Simple Zero Sized Typed Utc timezones for chrono"
license = "MIT"
keywords = ["time", "timezone"]
repository = "https://github.com/aobatact/chrono_simpletz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "clock", "serde_ts_seconds"]
std = []
clock = ["chrono/clock"]
serde = ["serde1","chrono/serde"]
serde_ts_all = ["serde_ts_milliseconds","serde_ts_milliseconds_option","serde_ts_nanoseconds","serde_ts_nanoseconds_option","serde_ts_seconds","serde_ts_seconds_option"]
serde_ts_seconds = ["serde"]
serde_ts_seconds_option = ["serde"]
serde_ts_milliseconds = ["serde"]
serde_ts_milliseconds_option = ["serde"]
serde_ts_nanoseconds = ["serde"]
serde_ts_nanoseconds_option = ["serde"]

[dependencies]
chrono = { version = "0.4", default-features = false }

[dependencies.serde1]
default-features = false
optional = true
version = "1.0.99"
package = "serde"
