[package]
name = "chrono-simpletz"
version = "0.1.3"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Simple Zero Sized Typed Utc timezones for chrono"
license = "MIT"
keywords = ["time", "timezone"]
repository = "https://github.com/aobatact/chrono_simpletz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "clock"]
std = []
clock = ["chrono/clock"]
serde1 = ["serde","chrono/serde"]
serde_ts_all = ["serde_ts_milliseconds","serde_ts_milliseconds_option","serde_ts_nanoseconds","serde_ts_nanoseconds_option","serde_ts_seconds","serde_ts_seconds_option", "serde_rfc3339"]
serde_ts_seconds = ["serde1"]
serde_ts_seconds_option = ["serde1"]
serde_ts_milliseconds = ["serde1"]
serde_ts_milliseconds_option = ["serde1"]
serde_ts_nanoseconds = ["serde1"]
serde_ts_nanoseconds_option = ["serde1"]
serde_rfc3339 = ["serde1"]

[dependencies]
chrono = { version = "0.4", default-features = false }

[dependencies.serde]
default-features = false
optional = true
version = "1.0"
package = "serde"
features = ["derive"]

#[dev-dependencies.serde]
#default-features = false
#version = "1.0"
#package = "serde"

[dev-dependencies]
serde_json = "1.0"
