[package]
name = "chrono-simpletz"
version = "0.1.4"
authors = ["aobatact <aobatact144@gmail.com>"]
edition = "2018"
description = "Simple Zero Sized Typed timezones for chrono"
license = "MIT"
keywords = ["time", "timezone"]
repository = "https://github.com/aobatact/chrono_simpletz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "clock"]
std = []
clock = ["chrono/clock"]
serde = ["dep:serde","chrono/serde"]
serde_ts_all = ["serde_ts_milliseconds","serde_ts_milliseconds_option","serde_ts_nanoseconds","serde_ts_nanoseconds_option","serde_ts_seconds","serde_ts_seconds_option", "serde_rfc3339", "serde_rfc3339_option"]
serde_ts_seconds = ["serde"]
serde_ts_seconds_option = ["serde"]
serde_ts_milliseconds = ["serde"]
serde_ts_milliseconds_option = ["serde"]
serde_ts_nanoseconds = ["serde"]
serde_ts_nanoseconds_option = ["serde"]
serde_rfc3339 = ["serde"]
serde_rfc3339_option = ["serde"]

[dependencies]
chrono = { version = "0.4", default-features = false }
serde = {default-features = false, optional = true, version = "1.0",features = ["derive"]}

[dev-dependencies]
serde_json = "1.0"

[package.metadata.docs.rs]
features = ["default", "serde_ts_all"]
